--- a/style.css
+++ b/style.css
@@ -436,3 +436,11 @@ footer {
 footer p {
   text-align: center;
 }
+
+
+#project-1 {
+  width: 90%; /* Adjust width as needed */
+  height: 300px; /* Adjust height as needed */
+  border-radius: 2rem;
+ 
+}
